<resources>
    <string name="app_name">Lumos Kamera</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="alert_action_ok_title">OK</string>
    <string name="search_start_title">Verbindung herstellen</string>
    <string name="server_found_title">Server gefunden</string>
    <string name="search_start_text">Es wird versucht eine Verbindung mit dem Lumos Server herzustellen.\n\nBitte habe etwas geduld, danke.</string>
    <string name="search_error_no_server_found_text">Leider konnte der Lumos Server nicht gefunden werden. Bitte gib die Server-Adresse manuell ein um fortfahren zu können.</string>
    <string name="search_error_server_not_found_anymore_text">Leider konnte der angegebene Lumos Server nicht gefunden werden. Bitte prüfe die Daten in den Einstellungen und probiere es erneut.</string>
    <string name="search_error_server_not_found_after_retry_text">Leider konnte der angegebene Lumos Server nicht gefunden werden. Bitte prüfe die Url und probiere es erneut.</string>
    <string name="settings_search_error_server_not_found">Leider konnte der angegebene Lumos Server nicht gefunden werden. Bitte prüfe die Einstellungen und probiere es erneut.</string>
    <string name="server_request_images_title">Bilder anfragen</string>
    <string name="server_request_images_text">Bilder werden abgerufen…</string>
    <string name="btn_server_manual">Manuelle Eingabe</string>
    <string name="btn_close_app">App beenden</string>
    <string name="btn_retry">Erneut suchen</string>
    <string name="alert_action_cancel_title">Abbrechen</string>
    <string name="common_btn_save_title">Speichern</string>
    <string name="alert_action_open_settings">Einstellungen</string>
    <string name="settings_toast_both_required">Alle Angaben sind Pflichtfelder</string>
    <string name="btn_random_name_title">Anonym bleiben</string>
    <string name="main_hint_server_missing">Mit Lumos Server verbinden</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_client_name_title">Verwendeter Name</string>
    <string name="settings_server_url">Lumos Server Url</string>
    <string name="common_save">Speichern</string>
    <string name="settings_more_information_text">Weiter Informationen zum Lumos Server, zu den Apps oder zum Datenschutz findest du unter:\n\nhttp://lumos-app.de</string>
    <string name="settings_btn_search_for_server">Server automatisch\nsuchen</string>
    <string name="common_dialog_lumos_server_title">Lumos Server</string>
    <string name="dialog_manual_server_settings_text">Bitte gib die IP des Lumos Server an</string>
    <string name="dialog_manual_server_settings_input_hint">IP-Adresse:Port</string>
    <string name="dialog_manual_server_settings_hint">z.B. http://192.178.4..22:8080</string>
    <string name="imagemanager_source_chooser_dialog_title">App auswählen</string>
    <string name="imagemanager_add_image_from_camera_dialog_title">Neues Bild erstellen</string>
    <string name="imagemanager_add_image_from_gallery_dialog_title">Gallery öffnen</string>
    <string name="imagemanager_camera_permission_explanation_title">Kamera Berechtigung</string>
    <string name="imagemanager_camera_permission_explanation_message">Damit du weitere Bilder aufnehmen kannst benötigt die App Zugriff auf deine Kamera.</string>
    <string name="imagemanager_camera_permission_explanation_retry_title">Kamera Berechtigung</string>
    <string name="imagemanager_camera_permission_explanation_retry_message">Damit du weitere Bilder aufnehmen kannst benötigt die App Zugriff auf deine Kamera.\nOhne diese Berechtigung können keine neuen Bilder aufgenommen werden.</string>
    <string name="imagemanager_gallery_permission_explanation_title">Externer Speicher</string>
    <string name="imagemanager_gallery_permission_explanation_message">Damit Bilder aus der Gallery hinzugefügt werden können benötigt die App Zugriff auf deine gepeicherten Bilder (Externer Speicher).</string>
    <string name="imagemanager_gallery_permission_explanation_retry_title">Externer Speicher</string>
    <string name="imagemanager_gallery_permission_explanation_retry_message">Damit Bilder aus der Gallery hinzugefügt werden können benötigt die App Zugriff auf deine gepsicherten Bilder (Externer Speicher).</string>
    <string name="permission_request_explanation_btn_ok_text">Hinweis schließen</string>
    <string name="dialog_client_name_text">Bitte gib einen Namen an damit die Bilder entsprechend zugeordnet werden können.</string>
</resources>
